force-app/main/default/objects/Extole_Writeback_Log__c/Extole_Writeback_Log__c.object-meta.xml
<CustomObject>
    <label>Extole Writeback Log</label>
    <nameField>
        <label>Log Name</label>
        <type>AutoNumber</type>
        <displayFormat>WBL-{0000}</displayFormat>
    </nameField>
    <pluralLabel>Extole Writeback Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>