force-app/main/default/objects/Extole_Writeback_Log__c/fields/Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Event_Id__c</fullName>
    <label>Event ID</label>
    <type>Text</type>
    <length>255</length>
    <externalId>true</externalId>
</CustomField>