force-app/main/default/objects/Extole_Writeback_Log__c/fields/Salesforce_Id__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Id__c</fullName>
    <label>Salesforce ID (Payload)</label>
    <type>Text</type>
    <length>18</length>
</CustomField>