force-app/main/default/objects/Extole_Writeback_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>SUCCESS</fullName><default>false</default><label>SUCCESS</label></value>
            <value><fullName>FAILED</fullName><default>false</default><label>FAILED</label></value>
            <value><fullName>SKIPPED</fullName><default>false</default><label>SKIPPED</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>